# turboplot

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yaml  release.yaml
src/: camera.rs  filtering.rs  lib.rs  loaders.rs  main.rs  multi_viewer.rs  renderer.rs  scale.rs  shader.wgsl  sync_features.rs  tek_wfm.rs  tiling.rs  util.rs  viewer.rs
src/input/: args.rs  file_manager.rs  loading.rs  mod.rs  web_file_manager.rs
src/loaders/: csv.rs  mod.rs  npy.rs  tek_wfm.rs
src/renderer/: cpu.rs  gpu.rs  mod.rs
src/tiling/: mod.rs  renderer.rs  scheduler.rs  tile.rs
