[package]
name = "turboplot"
description = "A blazingly fast waveform renderer made for visualizing huge traces"
repository = "https://github.com/Ledger-Donjon/turboplot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
pollster = "0.4.0"
bytemuck = "1"
muscat = "0.3.0"
npyz = "0.8.3"
ndarray = "0.16.1"
fixed = "1.29.0"
clap = { version = "4.5.46", features = ["derive"] }
