[package]
name = "turboplot"
description = "A blazingly fast waveform renderer made for visualizing huge traces"
repository = "https://github.com/Ledger-Donjon/turboplot"
version = "1.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "turboplot_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.33.0", features = ["wgpu"] }
egui = "0.33.0"
bytemuck = "1"
npyz = "0.8.3"
fixed = "1.29.0"
biquad = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Location",
    "Response",
    "UrlSearchParams",
    "Window",
] }
console_error_panic_hook = "0.1"
